# aws_agentcore

./: .agentcoreignore  .bedrock_agentcore.yaml  .env.example  .gitignore  PROJECT_PHASES.md  README.md  REQUIREMENTS.md  main.py  pyproject.toml  requirements.txt
.bedrock_agentcore/teilur_stock_agent/: Dockerfile
docs/: CleanArchitecture.md
docs/phases/: PHASE_1_INFRASTRUCTURE_AND_AUTH.md  PHASE_2_FINANCE_TOOLS.md  PHASE_3_KNOWLEDGE_BASE.md  PHASE_4_LANGGRAPH_REACT_AGENT.md  PHASE_5_LANGFUSE_OBSERVABILITY.md  PHASE_6_FASTAPI_AGENTCORE_DEPLOYMENT.md  PHASE_7_UAT_NOTEBOOK_AND_DOCS.md
infrastructure/: agentcore.tf  cognito.tf  ecr.tf  iam.tf  main.tf  outputs.tf  secrets.tf  variables.tf
notebooks/: demo.ipynb
src/application/agent/: graph.py  prompts.py  state.py
src/application/services/: knowledge_ingestor.py
src/application/use_cases/: get_historical_prices.py  get_realtime_price.py  retrieve_documents.py  run_agent.py
src/domain/entities/: document_chunk.py  stock_price.py
src/domain/ports/: document_loader_port.py  llm_port.py  observability_port.py  secret_store_port.py  stock_data_port.py  token_validator_port.py  vector_store_port.py
src/infrastructure/auth/: cognito_validator.py
src/infrastructure/entrypoints/: agentcore_handler.py  fastapi_app.py  tool_registry.py
src/infrastructure/knowledge_base/: faiss_vector_store.py  ingest.py  pdf_loader.py
src/infrastructure/llm/: bedrock_adapter.py
src/infrastructure/observability/: langfuse_adapter.py
src/infrastructure/stock_data/: yfinance_adapter.py
vectorstore/: index.faiss  index.pkl
(+1 files in other folders)
